[Fix] Fix workflows

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,9 +1,15 @@
 name: build action
 on: [push]
-jobs: 
+jobs:
   build-test:
-    run-on: ubuntu-latest
-    step: 
-      - run: echo building before
-        uses: actions/checkout@2
-      - run: mkdir build && cd build && cmake .. && make
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out repository code
+        uses: actions/checkout@v2
+      - name: build
+        run: cmake -B ${{github.workspace}}/build && cmake --build ${{github.workspace}}/build
+      - name: test
+        run: |
+            ctest --test-dir ${{github.workspace}}/build --rerun-failed --output-on-failure
+            #valgrind --tool=memcheck ./${{github.workspace}}/build/test/lock_free_test1
+
