--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -3,12 +3,12 @@ include_directories(${PROJECT_SOURCE_DIR}/src
     )
 
 add_executable(lock_free_test1
-    #lock_free_queue_test1.cpp
+    lock_free_queue_test1.cpp
     lock_free_stack_test1.cpp
     main.cpp
     )
 
-if(UNIX)
+if(UNIX OR MINGW)
 target_link_libraries(lock_free_test1 atomic pthread)
 endif()
 
