--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,5 +9,8 @@ ADD_SUBDIRECTORY(src)
 
 include(CTest)
 if(BUILD_TESTING)
+    ADD_SUBDIRECTORY(thirdparty/googletest)
+    # For Windows: Prevent overriding the parent project's compiler/linker settings
+    set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
     ADD_SUBDIRECTORY(tests)
 endif()
