[Fix] Update interruptible_thread

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -5,6 +5,7 @@ include_directories(${PROJECT_SOURCE_DIR}/src
 add_executable(lock_free_test1
     lock_free_queue_test1.cpp
     lock_free_stack_test1.cpp
+    interrupt_thread_test1.cpp
     main.cpp
     )
 
