[Add] Add the thread_pool test

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -6,6 +6,7 @@ add_executable(lock_free_test1
     lock_free_queue_test1.cpp
     lock_free_stack_test1.cpp
     interrupt_thread_test1.cpp
+    thread_pool_test1.cpp
     main.cpp
     )
 
