--- a/.github/workflows/linux_tmate.yml
+++ b/.github/workflows/linux_tmate.yml
@@ -3,19 +3,19 @@
 name: CI
 
 # Controls when the workflow will run
-on:
+on: 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
     inputs:
       debug_enabled:
         description: 'Run the build with tmate debugging enabled (https://github.com/marketplace/actions/debugging-with-tmate)'
         required: false
-        default: false
+        default: 'false'
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
+  action-tmate:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -24,4 +24,4 @@ jobs:
       # Enable tmate debugging of manually-triggered workflows if the input option was provided
       - name: Setup tmate session
         uses: mxschmitt/action-tmate@v3
-        if: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.debug_enabled }}
+        if: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.debug_enabled == 'true' }}
