--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.1)
+cmake_minimum_required(VERSION 3.14)
 
 project(thread_lock_free
     VERSION 1.0.1
@@ -9,8 +9,15 @@ ADD_SUBDIRECTORY(src)
 
 include(CTest)
 if(BUILD_TESTING)
-    ADD_SUBDIRECTORY(thirdparty/googletest)
+    include(FetchContent)
+    FetchContent_Declare(
+      googletest_v1.11
+      GIT_REPOSITORY https://github.com/google/googletest.git
+      GIT_TAG release-1.11.0
+    )
+    FetchContent_MakeAvailable(googletest_v1.11)
     # For Windows: Prevent overriding the parent project's compiler/linker settings
     set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
     ADD_SUBDIRECTORY(tests)
+
 endif()
